linkchecker 7.x-1.2, June 7, 2014
---------------------------------

* Issue #2280827: Notice: Undefined index: content-type in _linkchecker_status_handling()
* Issue #2146127 by hass: Notice: Undefined variable: format in_linkchecker_parse_fields()
* Issue #1334056 by Alan D., hass: Undefined indices in linkchecker_parse_fields() and _linkchecker_add_node_links()
* Issue #2088461 by fonant, hass: PDF link with #page= results in "URL fragment identifier not found in content"
* Issue #500866 by hass: Remove t() from assertion messages in tests
* Added Smiley module and Web Links modules to filter blacklist. 
* Issue #1923328 by larowlan: Fragment check fails when source page contains spaces between attribute name, equals and value.
* Issue #1923328 by hass: Notice: Undefined property: stdClass::$field_tags
* Issue #1948782 by jlscott: Linkchecker does not handle link cleanup on 'link' fields
* Issue #1926558 by hass: Block extraction re-scans fail.

linkchecker 7.x-1.1, February 14, 2013
--------------------------------------

* Code style review and fixes (minor level)
* No need to check comment/block enable variables in auto update.
* Issue #1901018 by hass: ERROR - __clone method called on non-object.
* Issue #1901014 by hass: ERROR - Cannot use object of type stdClass as array.
* Code style: indent secondary line of comment one space
* #1891900: Uninstall of variable 'linkchecker_check_connections_max' failed.
* Use #empty in empty table.
* #1882602: Compatible with Drupal <7.15
* #1850210 followup: _linkchecker_unpublish_nodes() may run out of memory by loading all nodes at once.
* #1719174: Editing node throws "Undefined property" stdClass::$nid in hook_node_prepare().
* #1879316: Support Workbench Moderation workflow (forward revisons handling)
* Fixed a test to use LANGUAGE_NONE constant.
* #1880652: Refactor _linkchecker_parse_fields() and _linkchecker_replace_fields() to be less expensive, see #1040790 for more details.