@@ -40,6 +40,11 @@ function linkchecker_uninstall() {
   variable_del('linkchecker_scan_comments');
   variable_del('linkchecker_scan_nodetypes');
   variable_del('linkchecker_log_level');
+
+  foreach (node_type_get_names() as $type => $name) {
+    variable_del('linkchecker_scan_node_' . $type);
+    variable_del('linkchecker_scan_comment_' . $type);
+  }
 }
 
 /**
@@ -195,7 +200,9 @@ function linkchecker_modules_disabled($modules) {
 
   // Disable link checks for comments.
   if (in_array('comment', $modules)) {
-    variable_set('linkchecker_scan_comments', 0);
+    foreach (node_type_get_names() as $type => $name) {
+      variable_del('linkchecker_scan_comment_' . $type);
+    }
     drupal_set_message(t('Link checks for comments have been disabled.'));
   }
 }
@@ -476,6 +483,24 @@ function linkchecker_update_7012() {
   else {
     return t('User agent already up to date.');
   }
+}
+
+/**
+ * Migrate node type and comment settings to content types settings.
+ */
+function linkchecker_update_7013() {
+  $types = array_keys(array_filter(variable_get('linkchecker_scan_nodetypes', array())));
+  foreach ($types as $type) {
+    variable_set('linkchecker_scan_node_' . $type, TRUE);
+    if (variable_get('linkchecker_scan_comments', 0)) {
+      variable_set('linkchecker_scan_comment_' . $type, TRUE);
+    }
+  }
+
+  variable_del('linkchecker_scan_nodetypes');
+  variable_del('linkchecker_scan_comments');
+
+  return t('Upgraded node type and comment settings.');
 }
 
 if (!function_exists('array_replace')) {
