@@ -1,3 +1,8 @@
+linkchecker 7.x-dev, nightly
+----------------------------
+
+* Issue #2060243 by hswong3i, hass: Split linkchecker_scan_nodetypes as content type specific.
+
 linkchecker 7.x-1.2, June 7, 2014
 ---------------------------------
 
